@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/dracut
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/dracut/ChangeLog,v 1.45 2012/02/16 17:51:18 aidecoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/dracut/ChangeLog,v 1.46 2012/02/16 18:01:27 aidecoe Exp $
+
+  16 Feb 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> dracut-010-r3.ebuild,
+  dracut-013-r2.ebuild, dracut-014-r2.ebuild, dracut-016.ebuild:
+  Depend on virtual/modutils instead of sys-apps/module-init-tools.  Dracut
+  should work with kmod tools which is alternative to module-init-tools,
+  although it hasn't been well tested yet.
 
   16 Feb 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> dracut-016.ebuild,
   metadata.xml:
